used pic from https://pixabay.com/photos/machang-bridge-bridge-night-3825439/

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>My first webpage</title>
     </head>
+    <!-- elements that appear on page will be b/w body element -->
     <body>
-        
+        <!-- img element cannot have child elements; self closing tag; has two attributes src- path of img alt-name of pic -->
+        <img src="" alt="">
     </body>
 </html>
