--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- elements that appear on page will be b/w body element -->
     <body>
         <!-- img element cannot have child elements; self closing tag; has two attributes src- path of img alt-name of pic -->
-        <img src="" alt="">
+        <img src="images/machang-bridge.jpg" alt="machang-bridge">
+        <p></p>
+        <p></p>
     </body>
 </html>
