adding text finished html part

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <!-- img element cannot have child elements; self closing tag; has two attributes src- path of img alt-name of pic -->
         <img src="images/machang-bridge.jpg" alt="machang-bridge">
-        <p></p>
-        <p></p>
+        <p>@machang-bridge</p>
+        <p>The 1.7km-long, dual two-lane bridge joins the cities of Masan and Changwon in the southern part of Korea. It provides a vital link across Masan Bay to relieve traffic congestion and shorten commuting time. Arup provided specialist technical and construction support services for the project.</p>
     </body>
 </html>
