--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>My first webpage</title>
+        <style>
+            img {
+                width: 300px;
+                border-radius: 50px;
+            }
+        </style>
     </head>
     <!-- elements that appear on page will be b/w body element -->
     <body>
