--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             img {
                 width: 300px;
                 border-radius: 50px;
+                float: left;
             }
         </style>
     </head>
