--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
                 width: 300px;
                 border-radius: 50px;
                 float: left;
+                margin-right: 10px;
             }
         </style>
     </head>
