--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
     <!-- what is typed here will populate on google -->
     <meta name="description" content="...">
     <title>Document</title>
+    <style>
+        em {
+            color: red;
+            font-style: normal;
+        }
+    </style>
 </head>
 <body>
-    
+    <p>random text that is <em>important</em></p>
 </body>
 </html>
