another element that makes it italic

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <p>random text that is <em>important</em></p>
+    <p>random text that is <i>important</i></p>
 </body>
 </html>
