--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <p>random text that is <i>important</i></p>
+    <p>random text that is <strong>important</strong></p>
 </body>
 </html>
