--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </style>
 </head>
 <body>
+    <!-- dont use b or i elements b/c styling should always be done in css -->
     <p>random text that is <strong>important</strong></p>
 </body>
 </html>
