going over heading notes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     </style>
 </head>
 <body>
+    <!-- headings should be used for hierarchy b/c they can always be changed with css  -->
+    <h1>h1</h1>
+    <h2>h2</h2>
+    <h3>h3</h3>
+    <h4>h4</h4>
+    <h5>h5</h5>
+    <h6>h6</h6>
     <!-- dont use b or i elements b/c styling should always be done in css -->
     <p>random text that is <strong>important</strong></p>
 </body>
