making sure changes saved to repo

--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
 </head>
 <body>
     <!-- headings should be used for hierarchy b/c they can always be changed with css  -->
-    <h1>h1</h1>
-    <h2>h2</h2>
-    <h3>h3</h3>
-    <h4>h4</h4>
-    <h5>h5</h5>
-    <h6>h6</h6>
+    <h1>heading 1</h1>
+    <!-- start of HTML section -->
+    <h2>HTML</h2>
+    <p>HTML tutorial</p>
+    <h3>Code</h3>
+    <h3>Exercise</h3>
+    <!-- end of HTML section -->
+
+    <!-- beginning of CSS section -->
+    <h2>CSS</h2>
+    <p>Css tutorial</p>
+    <!-- end of  CSS section-->
     <!-- dont use b or i elements b/c styling should always be done in css -->
     <p>random text that is <strong>important</strong></p>
+    <p>adding text to save commit</p>
 </body>
 </html>
