--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </style>
 </head>
 <body>
-    <a href="about.html">about company</a>
+    <a href="Company/about.html">about company</a>
 </body>
 </html>
