--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="Company/about.html">about company</a>
+    <!-- can also use an img element to click and go to another page as well -->
 </body>
 </html>
