fixed file path; accidently nested. whoops -.-

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </style>
 </head>
 <body>
+    <a href="../Mosh_HTML/index.html"></a>
     <a href="Company/about.html">about company</a>
     <!-- can also use an img element to click and go to another page as well -->
 </body>
