--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </style>
 </head>
 <body>
-    <a href="../Mosh_HTML/index.html"></a>
+    <a href="../Mosh_HTML/index.html">Home</a>
     <a href="Company/about.html">about company</a>
     <!-- can also use an img element to click and go to another page as well -->
+    <a href="../Mosh_HTML/images/machang-bridge.jpg">machang-bridge</a>
 </body>
 </html>
