now it will download when user clicks on it

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <a href="../Mosh_HTML/index.html">Home</a>
     <a href="Company/about.html">about company</a>
     <!-- can also use an img element to click and go to another page as well -->
-    <a href="../Mosh_HTML/images/machang-bridge.jpg">machang-bridge</a>
+    <a href="../Mosh_HTML/images/machang-bridge.jpg" download>machang-bridge</a>
 </body>
 </html>
