now picture is squashed

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <title>Document</title>
     <style>
-    
+        img {
+            width: 200px;
+            height: 200px;
+        }
     </style>
 </head>
 <body>
-    <img src="x/Mosh_HTML/images/peacock-on-tree.jpg" alt="a peacock on a tree">
+    <img src="/Mosh_HTML/images/peacock-on-tree.jpg" alt="a peacock on a tree">
 </body>
 </html>
