video is done! good job you (^_^)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         img {
             width: 200px;
             height: 200px;
+            /* very useful property; video is done! */
             object-fit: cover;
         }
     </style>
